--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -5,12 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Timer</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/timer.css" />
   </head>
   <body>
+    <a href="./index.html">Go to home</a>
+    <h1>Timer</h1>
     <section>
-      <a href="./index.html">Go to home</a>
-      <h1>Timer</h1>
       <input type="text" id="datetime-picker" />
       <button type="button" data-start>Start</button>
 
