--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Goit Js HW 10 by Isus</title>
+    <title>Goit JS HW 10 by Isus</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,9 +17,27 @@
     <load ="partials/header.html" />
 
     <section>
-      <h1>Goit Js HW 10</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
+      <h1 class="title">Goit Js HW 10</h1>
+      <ul class="actions">
+        <li class="action">
+          <a
+            class="link"
+            href="https://yagidka.com.ua/"
+            target="_blank"
+            rel="noopener noreferrer"
+            >My work</a
+          >
+        </li>
+        <li class="action">
+          <a
+            class="link"
+            href="https://github.com/SeredaOleksandr/goit-js-hw-10"
+            target="_blank"
+            rel="noopener noreferrer"
+            >View on GitHub</a
+          >
+        </li>
+      </ul>
     </section>
 
     <!-- Loads the specified .html file -->
