Correct Index.html

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
+    <load src="partials/header.html" />
 
     <section>
       <h1 class="title">Goit Js HW 10</h1>
@@ -41,7 +41,7 @@
     </section>
 
     <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+    <load src="partials/vite-promo.html" />
 
     <script type="module" src="./main.js"></script>
   </body>
