--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,19 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="partials/header.html" />
+    <header class="header">
+      <nav class="nav">
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a href="./1-timer.html" class="nav-link">Timer</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="./2-snackbar.html" class="nav-link">Snackbar</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
     <section>
       <h1 class="title">Goit Js HW 10</h1>
@@ -40,8 +52,25 @@
       </ul>
     </section>
 
-    <!-- Loads the specified .html file -->
-    <load src="partials/vite-promo.html" />
+    <section class="vite-promo">
+      <div class="container">
+        <div class="wrapper">
+          <h2 class="title">
+            <span class="gradient">Vite</span>
+          </h2>
+        </div>
+
+        <div class="thumb">
+          <img
+            class="pic"
+            src="./img/vite-logo.png"
+            alt="Vite logo"
+            width="640"
+            height="640"
+          />
+        </div>
+      </div>
+    </section>
 
     <script type="module" src="./main.js"></script>
   </body>
